Refactor Header and Footer into components

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,13 @@
-/* .NavBar {
+/* .Header {
     display: flex;
     justify-content: center;
     margin: 0 0 20px;
 }
 
-.NavBar-link {
+.Header-link {
     margin: 0 10px;
 }
 
-.NavBar-welcome {
+.Header-welcome {
     color: grey;
 } */
