--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,13 @@ code {
 button:focus, .btn:focus {
     outline: none;
 }
+
+#root {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+#root main {
+    flex: 1;
+}
